--- a/index.html
+++ b/index.html
@@ -344,7 +344,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+						
+						<div class="middle">
+      							<a class="btn" href="#">
+       							<i class="fab fa-facebook-f"></i>
+      							</a><br/>
+      							<a class="btn" href="#">
+      							<i class="fab fa-instagram"></i>
+      							</a>
+ 						</div>
+				</footer>
 
 			</div>
 
